--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.0",
+    "@aws-sdk/client-sesv2": "^3.940.0",
     "@hookform/resolvers": "^3.9.0",
     "@mdxeditor/editor": "^3.14.0",
     "@radix-ui/react-accordion": "^1.2.12",
