--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,7 +96,6 @@ jobs:
             # Google OAuth
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
             GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-
             
             # NextAuth
             NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}
@@ -108,14 +107,22 @@ jobs:
             
             # AI/LLM
             OPENROUTER_API_KEY=${{ secrets.OPENROUTER_API_KEY }}
-            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY}}
+            GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
             
             # Application
             NEXT_PUBLIC_URL=${{ secrets.NEXT_PUBLIC_URL }}
             NODE_ENV=production
             NEXT_TELEMETRY_DISABLED=1
             
-            # Email Configuration
+            # AWS SES Email Configuration
+            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION=${{ secrets.AWS_REGION }}
+            EMAIL_FROM=${{ secrets.EMAIL_FROM }}
+            EMAIL_REPLY_TO=${{ secrets.EMAIL_REPLY_TO }}
+            EMAIL_BCC_TRACKING=${{ secrets.EMAIL_BCC_TRACKING }}
+            
+            # Legacy SMTP (if still using)
             EMAIL_HOST=${{ secrets.EMAIL_HOST }}
             EMAIL_PORT=${{ secrets.EMAIL_PORT }}
             EMAIL_USER=${{ secrets.EMAIL_USER }}
