--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.0",
     "@aws-sdk/client-sesv2": "^3.940.0",
+    "@cashfreepayments/cashfree-js": "^1.0.5",
     "@hookform/resolvers": "^3.9.0",
     "@mdxeditor/editor": "^3.14.0",
+    "@paypal/react-paypal-js": "^8.9.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -37,6 +39,7 @@
     "@types/nodemailer": "^7.0.3",
     "@vercel/analytics": "^1.4.1",
     "bcryptjs": "^3.0.2",
+    "cashfree-pg": "^5.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -46,6 +49,7 @@
     "isomorphic-dompurify": "^2.30.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
+    "maxmind": "^5.0.1",
     "mongoose": "^8.19.2",
     "next": "^14.2.30",
     "next-auth": "^4.24.8",
@@ -71,6 +75,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.16",
+    "@types/maxmind": "^2.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
